<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">くまモン付箋ウィジェット</string>
    <string name="common_OKButton">OK</string>
    <string name="sticky_widget">くまモン付箋ウィジェット</string>
    <string name="sticky_widget_ics">くまモン付箋ウィジェット(スタック版)</string>
    <string name="sticky_Hint">ヒント</string>
    <string name="sticky_Clean">消去</string>
    <string name="sticky_Speech">スピーチ</string>
    <string name="sticky_icon">アイコン</string>
    <string name="sticky_back">背景</string>

    <string-array name="sticky_icons">
        <item>アイコン1</item>
        <item>アイコン2</item>
        <item>アイコン3</item>
        <item>アイコン4</item>
    </string-array>
    <string-array name="sticky_backs">
        <item>パターン1</item>
        <item>パターン2</item>
        <item>パターン3</item>
        <item>パターン4</item>
        <item>パターン5</item>
        <item>パターン6</item>
        <item>パターン7</item>
        <item>パターン8</item>
        <item>パターン9</item>
        <item>パターン10</item>
    </string-array>

</resources>